--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.web=ERROR
+logging.level.ru.leodev=DEBUG
+logging.file.name=${java.io.tmpdir}/app.log
