add logging and refractoring style

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 
-logging.level.org.springframework.web=ERROR
-logging.level.ru.leodev=DEBUG
+logging.level.com.mycompany.controller = DEBUG
+logging.level.com.mycompany.service = DEBUG
 logging.file.name=${java.io.tmpdir}/app.log
