--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/CustomerManagamentNormali
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.show-sql=true
-logging.level.com.mycompany.controller=DEBUG
-logging.level.com.mycompany.service=DEBUG
+logging.level.com.mycompany=DEBUG
 logging.file.name=${java.io.tmpdir}/app.log
