--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./pg_data:/var/lib/postgresql/data/pgdata
+      - ./docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
@@ -23,8 +23,8 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/CustomerManagement
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=1234
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-      - LOGGING_LEVEL_COM_MYCOMPANY=INFO
+      - LOGGING_LEVEL_COM_MYCOMPANY=DEBUG
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=none
       - SPRING_KAFKA_PRODUCER_BOOTSTRAP_SERVERS=kafka:9092
       - SPRING_KAFKA_PRODUCER_KEY_SERIALIZER=org.apache.kafka.common.serialization.StringSerializer
       - SPRING_KAFKA_PRODUCER_VALUE_SERIALIZER=org.apache.kafka.common.serialization.StringSerializer
@@ -33,6 +33,9 @@ services:
       - SPRING_KAFKA_CONSUMER_VALUE_SERIALIZER=org.apache.kafka.common.serialization.StringSerializer
       - SPRING_KAFKA_CONSUMER_GROUP_ID=group_id
     restart: always
+    links:
+      - db
+      - kafka
 
   nginx:
     image: nginx:1.17.2-alpine
@@ -55,4 +58,6 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "testTopic:1:3"
+      KAFKA_CREATE_TOPICS: "testTopic:1:1"
+    links:
+      - zookeeper
